# ts_type_filter

./: .gitignore  GUTENBERG-LICENSE.md  INSTALL.md  LICENSE.txt  README.md  TODO.md  create_defaults.py  debug_pydantic.py  demo_create_defaults.py  gotag  gotag.bat  integration_test.py  menu  menu.bat  prepare-sonnets.py  pyproject.toml  query.bat  query.sh  setup.py  stats.bat  stats.sh  test-manual.bat  test-regular.bat  test_create_defaults.py  test_menu_defaults.py
.devcontainer/: devcontainer.json  setup.bat  setup.sh
copilot/: debug_conflicting_rename.py  debug_merge.py  debug_stale_test.py  defaults.md  merge.md  normalize.md  normalize_spec.md  run_existing_tests.py  strip_comments.md  test_merge_normalizer_specs.py  validator.md
copilot/comments/: README.md  enhanced_strip_comments.py  placeholder_demo.py  string_literal_handling.md  strip_comments.py  test_strip_comments.py
copilot/merge/: debug_merge.py  example_usage.py  test_merge_normalizer_specs.py
copilot/normalize/: bug.ts  debug_bug_ts.py  debug_test.py  debug_union.py  demo_expansion.py  enhanced_normalizer.py  test_bug_ts.py  test_comprehensive.py  test_generic_types.py
copilot/validator/: test_validator.py
documentation/: algorithm.md  clone.md  codespaces.md  inverted-index.md
performance/: profile_gotaglio_import.py  test_import_time.py  test_parse_time.py  test_parsing_works.py
samples/inverted_index/: query.md  (+3 more)
src/: inverted.py  inverted_index.py  query.py  type_index.py
tests/: conftest.py  test_create_defaults.py  test_parser.py  test_ts_parser.py  test_type_filter.py  test_validator.py
tools/: README.md  prepare-sonnets.py  sonnets.txt
ts-type-filter/: inverted_index.py  stats.py  type_index.py
ts_type_filter/: __init__.py  create_defaults.py  filter.py  grammer.md  inverted_index.py  normalize.py  parser.py  ts_parser.py  ts_parser2.py  type_filter.py  typescript.lark  validator.py  validator2.py
(+34 files in other folders)
