[tool.poetry]
name = "ts_type_filter"
version = "0.1.0"
description = "Experimental library to assist in preparing Typescript type definitions for use in Large Language Model (LLM) prompts."
authors = ["Michael Hopcroft <mhop@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
nltk = "^3.9.1"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"