[tool.poetry]
name = "ts_type_filter"
version = "0.1.0"
description = "Experimental library to assist in preparing Typescript type definitions for use in Large Language Model (LLM) prompts."
authors = ["Michael Hopcroft <mhop@microsoft.com>"]
readme = "README.md"
homepage = "https://github.com/MikeHopcroft/ts_type_filter"
repository = "https://github.com/MikeHopcroft/ts_type_filter"
keywords = ["typescript", "llm", "type-definitions", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "ts_type_filter"}]

[tool.poetry.dependencies]
python = ">=3.12"
nltk = "^3.9.1"
rich = "^13.9.4"
tiktoken = "^0.9.0"
gotaglio = {git = "https://github.com/pragmatical/gotaglio"}
lark = "^1.2.2"
pydantic = "^2.11.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[tool.pytest.ini_options]
markers = [
    "manual: marks tests as manual (deselect with '-m \"not manual\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
